--- a/src/sass/sections/_hero.scss
+++ b/src/sass/sections/_hero.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   border-bottom: 0px;
-  background-color: darkslategray;
+  background-color: rgb(214, 214, 214);
   font-weight: 400;
   color: $dark-blue-text;
   padding: 0rem 5.6rem;
