--- a/src/sass/sections/_projects.scss
+++ b/src/sass/sections/_projects.scss
@@ -1,5 +1,5 @@
 #projects {
-  background-color: $white-color;
+  background-color: rgb(235, 220, 220);
   color: $dark-blue-text;
   margin-top: -10rem;
   padding-top: 15rem;
