--- a/src/sass/sections/_about.scss
+++ b/src/sass/sections/_about.scss
@@ -5,7 +5,7 @@
     $primary-color 0%,
     $secondary-color 100%
   );
-  color: rgb(235, 220, 220);
+  color: $white-color;
   height: 100%;
   border-top: 0px;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
