--- a/src/sass/sections/_hero.scss
+++ b/src/sass/sections/_hero.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   border-bottom: 0px;
-  background-color: rgb(235, 220, 220);
+  background: $white-color;
   font-weight: 400;
   color: $dark-blue-text;
   padding: 0rem 5.6rem;
